# minesweepersbot

./: README.md  mSq.py  mcdrop.py  moveZiko.py  s.launch
ArduinoMegaLocomotion/src/: HAL.ino  RAMPS14v.h  src.ino
devel/: .catkin  setup.sh
devel/include/ros_arduino_msgs/: Analog.h  AnalogFloat.h  AnalogFloatSensorReadRequest.h  AnalogFloatSensorReadResponse.h  AnalogFloatSensorWriteRequest.h  AnalogFloatSensorWriteResponse.h  AnalogPinMode.h  AnalogPinModeRequest.h  AnalogPinModeResponse.h  Digital.h  (+51 more)
move_basic/: CTestConfiguration.ini  Makefile  cmake_install.cmake  install_manifest.txt
move_basic/catkin_generated/: package.cmake
move_basic/cmake/: move_basic-genmsg-context.py
move_basic/devel/: .rosinstall  local_setup.sh
move_basic/gtest/: Makefile  cmake_install.cmake
src/move_basic/: CMakeCache.txt  CTestTestfile.cmake
src/twist_ziko_in_gazebo/: CMakeLists.txt  main.py  package.xml  twist_ziko_in_gazebo.launch
src/ziko/: .swp  CMakeLists.txt  package.xml
src/ziko/launch/: deminer.launch  mc.launch  mc_gazebo_2.launch  super.launch  ziko.launch
src/ziko/model/: deminer.config  deminer.sdf  model.config  model.sdf  super.config  super.sdf
src/ziko/param/: ekf_params.yaml  ekf_params_d.yaml  ekf_params_s.yaml  navsat_trans.yaml  navsat_trans_s.yaml  twistmux.yaml
sweeperMotion/: package.xml
sweeperMotion/src/: main.py  waypoint_gen.py
ziko/: package.xml
ziko/cmake/: turtlebot3_gazeboConfig.cmake
ziko/launch/: turtlebot3ss.launch  ziko.launch  ziko_gazebo.launch
ziko/model/: model.config  model.sdf
ziko/param/: ekf_params.yaml
(+112 files in other folders)
