<?xml version="1.0"?>
<package format="2">
  <name>ziko</name>
  <version>1.2.0</version>
  <description>
    Gazebo simulation package for Ziko
  </description>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>differential_drive_controller</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
</package>
